--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite + React</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Tuinue Wasichana – Uplifting African schoolgirls through education and opportunity."
+    />
+    <title>Tuinue Wasichana</title>
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-</body>
+    <!-- Vite injects JS here automatically -->
+    <script type="module" src="/src/index.js"></script>
+  </body>
 </html>
 
