--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="root"></div>
     <!-- Vite injects JS here automatically -->
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
 
