Refactor ProgramCard to use SVG icons, enhance StoryCard styles, and implement global theme variables
- Updated ProgramCard component to render SVG icons based on the program title instead of using image props.
- Improved StoryCard styles with enhanced hover effects and layout adjustments.
- Introduced a global theme CSS file for consistent color, typography, spacing, and shadow styles across the application.
- Refined layout and styles in MainLayout, Donate, Home, and NotFound pages for better responsiveness and visual appeal.
- Added form validation and preset donation amounts in the Donate page for improved user experience.
- Enhanced accessibility features, including focus styles and ARIA attributes for form elements.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tuinue Wasichana</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Empowering schoolgirls across Africa through education, dignity kits, mentorship, and safe learning environments. Join us in making a difference.">
+    <meta name="keywords" content="donation, education, africa, schoolgirls, empowerment, charity, kenya">
+    <meta name="author" content="Tuinue Wasichana">
+    <meta property="og:title" content="Tuinue Wasichana - Empowering African Schoolgirls">
+    <meta property="og:description" content="Join us in supporting schoolgirls across Africa with access to education, mentorship, and resources they need to thrive.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tuinue-wasichana.com">
+    <title>Tuinue Wasichana - Empowering African Schoolgirls</title>
   </head>
   <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
